--- a/style/style.css
+++ b/style/style.css
@@ -117,7 +117,7 @@
     }
     
     #trackTable tr {
-      border-top: 4px solid #dee2e6;
+      border-top: 4px solid #c8d8e7;
       background-color: #ffffff;
     }
     
